k8s/user-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: authdb
  labels:
    app.kubernetes.io/name: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: user-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: user-service
    spec:
      containers:
        - name: user-service
          image: 765951922643.dkr.ecr.ap-south-1.amazonaws.com/authdb/user-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
              name: http
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8002
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
