k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: authdb
  labels:
    app.kubernetes.io/name: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: authdb
  labels:
    app.kubernetes.io/name: mongodb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: authdb
  labels:
    app.kubernetes.io/name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: authdb
  labels:
    app.kubernetes.io/name: auth-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: authdb
  labels:
    app.kubernetes.io/name: user-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: user-service
  ports:
    - name: http
      port: 8002
      targetPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: authdb
  labels:
    app.kubernetes.io/name: task-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: task-service
  ports:
    - name: http
      port: 8003
      targetPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: authdb
  labels:
    app.kubernetes.io/name: gateway
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: gateway
  ports:
    - name: http
      port: 80
      targetPort: 80
